fix wrap

--- a/main.css
+++ b/main.css
@@ -161,6 +161,7 @@ h1 {
   margin: 1.5rem 0 0;
   padding: 0;
   justify-content: center;
+  flex-wrap: wrap;
 }
 
 @media screen and (min-width: 768px) {
